shell script optimize